# anuroopsriram.github.io

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CNAME  Gemfile  README.md  README_PYTHON.md  _config.yml  app.py  build.py  dev.py  index.html  pyproject.toml  requirements.txt
_data/: codelist.yml  datalist.yml  news.yml  pi.yml  publist.yml  years.yml
_includes/: README.md  analytics.html  footer.html  sidebar.html
_layouts/: code.html  data.html  datasets.html  homelay.html
_pages/: code.md  data.md  datasets.md  home.md  publications.md
_sass/bootstrap/: _buttons.scss  _variables.scss
_site/allnews/: index.html
_site/datasets/: index.html
_site/publications/: index.html
_site/static/: CNAME
css/: main.scss
data/: datalist.yml  news.yml
docs/: index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
docs/aboutwebsite/: index.html
docs/allnews/: index.html
docs/code/: index.html
docs/css/: main.scss
docs/datasets/: index.html
docs/publications/: index.html
docs/site/aboutwebsite/: index.html
docs/static/css/: main.css  main.scss
docs/static/js/: theme.js
papers/: amodeiDS2.txt  battenbergBias.txt  battenbergTransducers.txt  chanussotOC20.txt  gasteigerGemnetOC.txt  hsuRobustWav2Vec.txt  huForcenet.txt  jainRNNT.txt  knollFastmri.txt  knollFastmri2019.txt  muckleyFastmri2020.txt  pratapMLS.txt  pratapMassively.txt  shuaibiSpinconv.txt  sriramFusion.txt  sriramGraphParallel.txt  sriramGrappaNet.txt  sriramRobustGAN.txt  sriramWav2vecaug.txt  synnaeveE2EASR.txt  tranOc22.txt  zitnickOcpwhitepaper.txt  zitnickSphericalChannels.txt
src/website/: __init__.py  app.py  builder.py  cli.py  config.py  data_loader.py  filters.py  routes.py
static/css/: main.css  main.scss
static/js/: theme.js
templates/includes/: footer.html  head.html  header.html  pub_card.html  sidebar.html
templates/layouts/: base.html  gridlay.html  homelay.html
templates/pages/: aboutwebsite.html  allnews.html  code.html  datasets.html  home.html  llms_full.txt  publications.html
