[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anuroop-academic-website"
version = "1.0.0"
description = "Academic website for Anuroop Sriram built with Flask"
readme = "README_PYTHON.md"
license = "MIT"
authors = [
    { name = "Anuroop Sriram", email = "anuroop.sriram@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0.0,<4.0.0",
    "Frozen-Flask>=1.0.0,<2.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "libsass>=0.22.0,<1.0.0",
    "Jinja2>=3.1.2,<4.0.0",
    "MarkupSafe>=2.1.3,<3.0.0",
    "click>=8.1.7,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://anuroopsriram.github.io"
Repository = "https://github.com/anuroopsriram/anuroopsriram.github.io"

[project.scripts]
website-dev = "src.website.cli:dev"
website-build = "src.website.cli:build"

[tool.hatch.version]
path = "src/website/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/website"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["website"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "flask_frozen.*",
    "sass.*",
    "yaml.*",
]
ignore_missing_imports = true